--- a/portfolio_index.html
+++ b/portfolio_index.html
@@ -30,7 +30,7 @@
         <section class="hero-section autoBlur" id="home-page">
             <div class="hero-vid">
                 <video loop autoplay muted plays-inline class="hero-video">
-                    <source src="videos/hero-1.mp4" type="video/mp4">
+                    <source src="hero-1.mp4" type="video/mp4">
                 </video>
 
                 <div class="hero-info">
@@ -69,14 +69,14 @@
                     <h1>Island Runner</h1>
                     <p>Island Runner is a fast-paced adventure where you collect coins across tropical terrain to upgrade your jumping power and reach new heights!</p>
 
-                    <video src="videos/feature-1.mp4" autoplay loop muted plays-inline></video>
+                    <video src="feature-1.mp4" autoplay loop muted plays-inline></video>
                     <a href="https://www.roblox.com/games/74883117389404/" target="_blank"><button>Let's Play</button></a>
                 </div>
                 <div class="card autoDisplay">
                     <h1>Quantum ML</h1>
                     <p>A research-based project exploring quantum-enhanced machine learning using QBM architecture.</p>
 
-                    <video src="videos/feature-2.mp4" autoplay loop muted plays-inline></video>
+                    <video src="feature-2.mp4" autoplay loop muted plays-inline></video>
                     <a href="https://github.com/Sukhraj-ai/AI-Research-Samples/blob/main/Quantum_SVM_Classification.ipynb" target="_blank">
                         <button>View Project</button>
                     </a>
@@ -85,7 +85,7 @@
                     <h1>GPT Model</h1>
                     <p>Built a custom LLM using GPT architecture and PyTorch, optimizing with self-attention and bigram models.</p>
 
-                    <video src="videos/feature-3.mp4" autoplay loop muted plays-inline></video>
+                    <video src="feature-3.mp4" autoplay loop muted plays-inline></video>
                     <a href="https://github.com/Sukhraj-ai/AI-Research-Samples/blob/main/GPT_LLM.ipynb" target="_blank">
                         <button>View Project</button>
                     </a>
@@ -94,14 +94,14 @@
                 <div class="card autoDisplay">
                     <h1>Blockchain</h1>
                     <p>Dive into the world of Blockchain—uncover its roots, evolution into a global tech force, the myths along the way, and how you can harness its power in the real world.</p>
-                    <video src="videos/feature-4.mp4" autoplay loop muted plays-inline></video>
+                    <video src="feature-4.mp4" autoplay loop muted plays-inline></video>
                     <a href="https://open.hpi.de/verify/xuleg-zenof-mipuc-luhit-menun" target="_blank">
                         <button>View Certificate</button>
                     </a>
                 </div>
 
                 <div class="card autoDisplay">
-                    <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>
+                    <video src="feature-5.mp4" autoplay loop muted plays-inline></video>
                 </div>
 
                 <div class="card">
