--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <div class = "head-left">
-                <img src="img/logo.png" alt="Logo" class="logo">
+                <img src="logo.png" alt="Logo" class="logo">
                 <a href="https://www.linkedin.com/in/sukhraj-singh-basi/" target="_blank">
                     <button>LinkedIn</button>
                 </a>
@@ -51,7 +51,7 @@
             <div class="autoBlur">
                 <h1>DISCOVER MY JOURNEY IN TECH & INNOVATION</h1>
             </div>
-            <img class="stones-img" src= "img/stones.png" alt="stones-img">
+            <img class="stones-img" src= "stones.png" alt="stones-img">
             <div class="image-box autoTakeFull">
                 <img src="img/about.webp" alt="about-img">
             </div>
@@ -118,9 +118,9 @@
             <a href="mailto:sukhraj.basi@student.kpu.ca">
                 <button>CONTACT ME</button>
             </a>
-            <img class= "img1" src="img/swordman.webp" alt="contact-img">
-            <img class= "img2" src="img/contact-1.webp" alt="contact-img">
-            <img class= "img3" src="img/contact-2.webp" alt="contact-img">    
+            <img class= "img1" src="swordman.webp" alt="contact-img">
+            <img class= "img2" src="contact-1.webp" alt="contact-img">
+            <img class= "img3" src="contact-2.webp" alt="contact-img">    
 
         </section>
 
