--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <img class="stones-img" src= "stones.png" alt="stones-img">
             <div class="image-box autoTakeFull">
-                <img src="img/about.webp" alt="about-img">
+                <img src="about.webp" alt="about-img">
             </div>
 
          <h4>From Security Operations to Software Development</h4>
